--- a/troubleshooting/index.html
+++ b/troubleshooting/index.html
@@ -81,6 +81,48 @@
             <p>・届くギリギリのラインでコードを接続していないか確認してください。</p>
         </section>
         <section id="tablet">
+            <h2>タブレット関係</h2>
+            <h3></h3>タブレットがつかない</h3>
+            <p>・充電が十分にあることを確認してください。赤い電池に！が表示されていると、充電がありません。</p>
+            <p>・充電用のジャックの近くにある電源ランプが点いているか確認してください。</p>
+            <p>・画面が黒い画面のままフリーズしている可能性があります。「フリーズしてしまった」を参照してください。</p>
+            <p>・画面が暗い可能性があります。明るさを上げるボタンを押してみてください。</p>
+
+            <h3>フリーズしてしまった（画面が動かなくなった）</h3>
+            <p>・電源ボタンを押したまま再読み込みボタン（<i class="fa-solid fa-rotate-right"></i>）を押してください。強制再起動するので、再度ログインしてください。</p>
+            <p>・時間を開けて再度動かしてみてください。</p>
+
+            <h3>ネットに繋がらない</h3>
+            <p>・教室右前方のルーターから離れすぎていないかを確認してください。</p>
+            <p>・Wi-fiがオンになっているか確認してください。</p>
+
+            <h3>日本語入力ができない</h3>
+            <p>・Googleドキュメントなどで打てなくなったときは、再読込すると改善する場合があります。</p>
+            <p>・それでも改善しない場合は、メニューの「キーボード」の中の「日本語」の「ひらがな」にチェックを入れると日本語入力ができます。</p>
+
+            <h3>重い、ラグい</h3>
+            <p>・開いているタブを閉じてみてください。</p>
+            <p>・少し重いサービスを使っているタブを閉じてみてください。（Canva、Googleサービス系など）</p>
+            <p>・再起動してみてください。</p>
+
+            <h3>Googleサービス関係</h3>
+            <p>パスワードを忘れた</p>
+            <p>・先生に相談しましょう。</p>
+
+            <h3>パスワードが違うと言われる</h3>
+            <p>・一度落ち着いて打ち直してみてください。</p>
+            <p>・それでも駄目なときは、再起動してください。</p>
+
+            <h3>アクセス権限がない</h3>
+            <p>・ファイルのオーナーがアクセスできないように設定しているか、学校のアカウントではないアカウントでサインインしている可能性があります。</p>
+
+            <h3>閲覧しかできない</h3>
+            <p>・ファイルのオーナーが閲覧しかできないように設定している可能性があります。</p>
+            <p>・Google Classroomで課題を提出してしまっている可能性があります。再度編集したい場合は提出を取り消ししてください。</p>
+
+            <h3>その他</h3>
+            <p>恐竜ゲームができない</p>
+            <p>・仕様です</p>
         </section>
     </main>
 
