--- a/question/details/index.html
+++ b/question/details/index.html
@@ -103,236 +103,216 @@
         // Supabase ライブラリをインポート
         import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-        const pd = createClient('https://mgsbwkidyxmicbacqeeh.supabase.co', 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1nc2J3a2lkeXhtaWNiYWNxZWVoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk5NDA0MjIsImV4cCI6MjA1NTUxNjQyMn0.fNkFQykD9ezBirtJM_fOB7XEIlGU1ZFoejCgrYObElg');
+        const pd = createClient(
+            "https://mgsbwkidyxmicbacqeeh.supabase.co",
+            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1nc2J3a2lkeXhtaWNiYWNxZWVoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk5NDA0MjIsImV4cCI6MjA1NTUxNjQyMn0.fNkFQykD9ezBirtJM_fOB7XEIlGU1ZFoejCgrYObElg"
+        );
 
         const urlParams = new URLSearchParams(window.location.search);
-        const questionId = urlParams.get('id');
+        const questionId = urlParams.get("id");
 
+        // 質問データの取得
         async function fetchQuestion() {
             const { data: question, error } = await pd
-                .from('questions')
-                .select('*')
-                .eq('id', questionId)
+                .from("questions")
+                .select("*")
+                .eq("id", questionId)
                 .single();
 
             if (error) {
-                console.error('Error fetching question:', error);
+                console.error("Error fetching question:", error);
                 return;
             }
 
-            document.getElementById('question-title').innerHTML = question.title;
-            document.getElementById('username').innerHTML = '質問者:' + question.username;
-            document.getElementById('question-content').innerHTML = question.content;
+            document.getElementById("question-title").innerHTML = question.title;
+            document.getElementById("username").innerHTML = "質問者：" + question.username;
+            document.getElementById("question-content").innerHTML = question.content;
 
-            // 質問の投稿日時を表示
             const postDate = new Date(question.created_at).toLocaleString();
-            document.getElementById('question-posted-at').textContent = `投稿日時: ${postDate}`;
+            document.getElementById("question-posted-at").textContent = `投稿日時: ${postDate}`;
 
-
-            // ページタイトルを更新
-            document.getElementById('page-title').textContent = `${question.title} - みとい知恵袋 | 水戸一高附属中総合ウェブサイト`;
-
-            document.getElementById('page-link').innerHTML = `<a href="?id=${questionId}"><i class="fa-solid fa-circle-info"></i>質問「${question.title}」の詳細</a>`
+            document.getElementById("page-title").textContent = `${question.title} - みとい知恵袋 | 水戸一高附属中総合ウェブサイト`;
+            document.getElementById(
+                "page-link"
+            ).innerHTML = `<a href="?id=${questionId}"><i class="fa-solid fa-circle-info"></i>質問「${question.title}」の詳細</a>`;
 
             fetchAnswers();
         }
 
+        // 回答一覧を取得
         async function fetchAnswers() {
             const { data: answers, error } = await pd
-                .from('answers')
-                .select('*')
-                .eq('question_id', questionId)
-                .order('created_at', { ascending: false });
+                .from("answers")
+                .select("*")
+                .eq("question_id", questionId)
+                .order("created_at", { ascending: false });
 
             if (error) {
-                console.error('Error fetching answers:', error);
+                console.error("Error fetching answers:", error);
                 return;
             }
 
-            const answerList = document.getElementById('answer-list');
-            answerList.innerHTML = '';
-            answers.forEach(answer => {
-                const li = document.createElement('li');
+            const answerList = document.getElementById("answer-list");
+            answerList.innerHTML = "";
+            answers.forEach((answer) => {
+                const li = document.createElement("li");
                 const answerDate = new Date(answer.created_at).toLocaleString();
                 li.innerHTML = `
-          ${answer.content} - by ${answer.username}
-          <small>(${answerDate})</small>`;
+            ${answer.content} - by ${answer.username}
+            <small>(${answerDate})</small>`;
                 answerList.appendChild(li);
             });
         }
 
-        document.getElementById('answer-form').addEventListener('submit', async (event) => {
+        // 回答投稿処理
+        document.getElementById("answer-form").addEventListener("submit", async (event) => {
             event.preventDefault();
             event.target.disabled = true;
 
-            const content = parseMarkdown(document.getElementById('answer-content').value.trim());
-            const username = parseMarkdown(document.getElementById('answer-username').value.trim());
+            // 🔒 ログイン済みユーザーを取得
+            const { data: { user }, error: userError } = await pd.auth.getUser();
+            if (userError || !user) {
+                showCustomAlert("回答を投稿するにはログインが必要です");
+                event.target.disabled = false;
+                return;
+            }
 
-            // スパム対策: 入力チェック
+            // 🌟 表示名を取得
+            let displayName = "とある水戸一の名無し";
+            const { data: users } = await pd.from("users").select("display_name").eq("id", user.id).single();
+            if (users && users.display_name) displayName = users.display_name;
+
+            const content = parseMarkdown(document.getElementById("answer-content").value.trim());
+
             if (!content) {
-                showCustomAlert('すべてのフィールドを入力してください');
+                showCustomAlert("すべてのフィールドを入力してください");
+                event.target.disabled = false;
                 return;
             }
             if (content.length < 20) {
-                showCustomAlert('回答は20文字以上にしてください\n(スパム対策です)');
+                showCustomAlert("回答は20文字以上にしてください（スパム対策です）");
+                event.target.disabled = false;
                 return;
             }
 
-            // スパム対策: 投稿間隔制限（30秒）
-            const lastAnswerTime = localStorage.getItem('lastAnswerTime') || 0;
+            const lastAnswerTime = localStorage.getItem("lastAnswerTime") || 0;
             const now = Date.now();
             if (now - lastAnswerTime < 60000) {
-                showCustomAlert('短時間での連続投稿はできません。少し待ってから再度投稿してください');
+                showCustomAlert("短時間での連続投稿はできません。少し待ってから再度投稿してください");
+                event.target.disabled = false;
                 return;
             }
 
-            isFormDirty = false; // フォームが送信されたので汚れていない状態にリセット
+            isFormDirty = false;
 
-            const { error } = await pd
-                .from('answers')
-                .insert([{ question_id: questionId, content, username: username || 'とある水戸一の名無し', created_at: new Date() }]);
+            // 💾 回答を挿入（user_id, user_email, display_nameも含む）
+            const { error } = await pd.from("answers").insert([
+                {
+                    question_id: questionId,
+                    content,
+                    username: displayName,
+                    created_at: new Date(),
+                    user_id: user.id,
+                    user_email: user.email,
+                },
+            ]);
 
             if (error) {
-                console.error('Error posting answer:', error);
+                console.error("Error posting answer:", error);
+                showCustomAlert("回答の投稿に失敗しました");
             } else {
-                showCustomAlert('回答が投稿されました');
-                localStorage.setItem('lastAnswerTime', now); // 投稿時刻を保存
+                showCustomAlert("回答が投稿されました");
+                localStorage.setItem("lastAnswerTime", now);
                 markAsAnswered(questionId);
                 fetchAnswers();
-                document.getElementById('answer-content').value = '';
-                document.getElementById('answer-username').value = '';
+                document.getElementById("answer-content").value = "";
             }
+
             setTimeout(() => {
                 event.target.disabled = false;
             }, 5000);
         });
 
+        // 回答済みフラグ
         async function markAsAnswered(questionId) {
-            const { error } = await pd
-                .from('questions')
-                .update({ answered: true })
-                .eq('id', questionId);
-
-            if (error) {
-                console.error("回答済みフラグ更新エラー:", error);
-            }
+            const { error } = await pd.from("questions").update({ answered: true }).eq("id", questionId);
+            if (error) console.error("回答済みフラグ更新エラー:", error);
         }
 
         fetchQuestion();
 
+        // --- Markdown関連 ---
         function parseMarkdown(text) {
-            // 太字: **太字**
-            text = text.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
-
-            // 斜体: *斜体*
-            text = text.replace(/\*(.*?)\*/g, '<em>$1</em>');
-
-            // 取り消し線: ~~取り消し~~
-            text = text.replace(/~~(.*?)~~/g, '<del>$1</del>');
-
-            // プレースホルダー格納用
+            text = text.replace(/\*\*(.*?)\*\*/g, "<strong>$1</strong>");
+            text = text.replace(/\*(.*?)\*/g, "<em>$1</em>");
+            text = text.replace(/~~(.*?)~~/g, "<del>$1</del>");
             const placeholders = {};
             let index = 0;
-
-            // リンク: [リンク文字](URL)
-            text = text.replace(/\[([^\]]+)\]\((https?:\/\/[^\s)]+)\)/g, (match, label, url) => {
-                const key = `__URL_PLACEHOLDER_${index++}__`;
+            text = text.replace(/\[([^\]]+)\]\((https?:\/\/[^\s)]+)\)/g, (m, label, url) => {
+                const key = `__URL_${index++}__`;
                 placeholders[key] = `<a href="${url}" target="_blank" rel="noopener noreferrer">${label}</a>`;
                 return key;
             });
-
-            // 裸のURLを自動リンク化（リンクのURL部分は除外済み）
             text = text.replace(/(https?:\/\/[^\s]+)/g, '<a href="$1" target="_blank" rel="noopener noreferrer">$1</a>');
-
-            text = text.replace(/\n/g, '<br>'); // 改行
-
-            // インラインコード: `code`
-            text = text.replace(/\`(.*?)\`/g, (match, code) => {
-                return `<code>${code.replace(/</g, "&lt;").replace(/>/g, "&gt;")}</code>`;
-            });
-
-            // プレースホルダーを元に戻す
-            Object.keys(placeholders).forEach(key => {
-                text = text.replace(key, placeholders[key]);
-            });
-
+            text = text.replace(/\n/g, "<br>");
+            text = text.replace(/\`(.*?)\`/g, (_, code) => `<code>${code.replace(/</g, "&lt;").replace(/>/g, "&gt;")}</code>`);
+            Object.keys(placeholders).forEach((k) => (text = text.replace(k, placeholders[k])));
             return text;
         }
 
+        // --- 入力補助 ---
         const textarea = document.getElementById("answer-content");
+
+        function insertAtCursor(textarea, before, after, selectText = "") {
+            const start = textarea.selectionStart;
+            const end = textarea.selectionEnd;
+            const text = textarea.value;
+            const selected = text.slice(start, end) || selectText;
+            const newText = text.slice(0, start) + before + selected + after + text.slice(end);
+            textarea.value = newText;
+            textarea.focus();
+            textarea.setSelectionRange(start + before.length, start + before.length + selected.length);
+        }
 
         document.getElementById("bold").addEventListener("click", (e) => {
             e.preventDefault();
             insertAtCursor(textarea, "**", "**", " ");
         });
-
         document.getElementById("italic").addEventListener("click", (e) => {
             e.preventDefault();
             insertAtCursor(textarea, "*", "*", " ");
         });
-
         document.getElementById("strikethrough").addEventListener("click", (e) => {
             e.preventDefault();
             insertAtCursor(textarea, "~~", "~~", " ");
         });
-
         document.getElementById("link").addEventListener("click", (e) => {
             e.preventDefault();
-            // デフォルトで「リンクテキスト」を選択
             insertAtCursor(textarea, "[", "](URL)", "リンクテキスト");
         });
 
-        function insertAtCursor(textarea, before, after, selectText = "") {
-            const start = textarea.selectionStart;
-            const end = textarea.selectionEnd;
-
-            const text = textarea.value;
-            const selected = text.slice(start, end) || selectText;
-
-            // テキスト挿入
-            const newText = text.slice(0, start) + before + selected + after + text.slice(end);
-            textarea.value = newText;
-
-            // 選択範囲設定
-            textarea.focus();
-            textarea.setSelectionRange(start + before.length, start + before.length + selected.length);
-        }
-
+        // --- プレビュー ---
         const previewArea = document.getElementById("preview");
-
         document.getElementById("answer-form").addEventListener("keyup", (e) => {
-            const username = parseMarkdown(document.getElementById("answer-username").value.trim());
             const content = parseMarkdown(document.getElementById("answer-content").value.trim());
-
             previewArea.innerHTML = `
-                <ul>
-					<li>
-						${content} - by ${username || "とある水戸一の名無し"}
-						<small>(${new Date().toLocaleString()})</small>
-					</li>
-				</ul>
-            `
-        })
-
-        let isFormDirty = false;
-
-        const formElements = [
-            document.getElementById('question-username'),
-            document.getElementById('question-title'),
-            document.getElementById('question-content'),
-            document.getElementById('faster')
-        ];
-
-        formElements.forEach(el => {
-            el.addEventListener('input', () => {
-                isFormDirty = true;
-            });
+        <ul>
+            <li>
+                ${content} - by <span id="preview-name">（あなたの表示名）</span>
+                <small>(${new Date().toLocaleString()})</small>
+            </li>
+        </ul>`;
         });
 
-        window.addEventListener('beforeunload', (event) => {
+        // --- 未保存警告 ---
+        let isFormDirty = false;
+        document.getElementById("answer-content").addEventListener("input", () => {
+            isFormDirty = true;
+        });
+        window.addEventListener("beforeunload", (event) => {
             if (isFormDirty) {
                 event.preventDefault();
-                event.returnValue = '';
+                event.returnValue = "";
             }
         });
     </script>
